# burn-with-wasm

./: Cargo.toml  LICENSE_MIT  README.md
src/: lib.rs  model.rs  state.rs
www/: index.html  index.js  package-lock.json  package.json
