[package]
name = "burn-with-wasm"
version = "0.1.0"
authors = ["Filippo Pedrazzini <filippo.pedrazzini@joandko.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[features]
default = []

[dependencies]
burn = {version = "0.10.0", default-features = false, features = ["ndarray"]}
getrandom = { version = "0.2", features = ["js"] }
serde = {version = "1.0.164", default-features = false, features = ["derive", "alloc"]} # alloc is for no_std, derive is needed
wasm-bindgen = "0.2.87"
